# easy-dataset-cli

./: .gitignore  README.md  README.tr.md  README.zh-CN.md  pyproject.toml
.claude-plugin/: marketplace.json
design/: 11-dataset-eval-feedback-loop.md
docs/: SERVER_QUIRKS.md
easyds/: __init__.py  __main__.py  cli.py
easyds/core/: blind_test.py  chunks.py  dataset_eval.py  datasets.py  distill.py  eval.py  eval_attribution.py  eval_fixes.py  eval_judge.py  eval_tasks.py  export.py  files.py  ga.py  model.py  project.py  prompts.py  questions.py  session.py  tags.py  tasks.py  templates.py
easyds/skills/: SKILL.md
easyds/skills/reference/: 01-getting-started.md  02-command-reference.md  04-custom-prompts.md  06-operating-rules.md  08-task-settings.md  09-pdf-and-data-cleaning.md  10-question-templates.md
easyds/skills/reference/workflows/: document-cleansing.md  (+3 more)
easyds/utils/: backend.py  repl_skin.py
plugins/easyds/.claude-plugin/: plugin.json
plugins/easyds/commands/: easyds-setup.md
tests/: TEST.md  test_core.py  test_dataset_eval.py  test_full_e2e.py
tests/fixtures/eval/: case2-broken-sentiment.json
tests_examples/case1-image-vqa/: README.md
tests_examples/case1-image-vqa/input/: make_images.py
tests_examples/case1-image-vqa/output/: 01_import.json  02_images.json  03_qgen.json  05_image_question_task.json  06_questions_list.json  07_datasets_gen.json  08_image_dataset_task.json  10_image_datasets_export_raw.json  run_meta.txt  vqa-alpaca.json
tests_examples/case2-sentiment/: README.md
tests_examples/case2-sentiment/input/: reviews.md
tests_examples/case2-sentiment/output/: 01_upload.json  02_split.json  03_chunks.json  04_template_apply.json  05_questions.json  06_generate.json  07_datasets.json  08_export.json  run_meta.txt  sentiment-alpaca.json  template_id.txt
tests_examples/case3-multi-turn/: README.md
tests_examples/case3-multi-turn/input/: physics-tree.json
tests_examples/case3-multi-turn/output/: 01_distill.json  02_questions.json  03_generate_multiturn.json  04_conversations.json  multiturn-sharegpt.json  run_meta.txt
tests_examples/case3-multi-turn/prompt/: einstein.md
tests_examples/case4-cleansing/: README.md
tests_examples/case4-cleansing/input/: noisy-safety.md
tests_examples/case4-cleansing/output/: 01_settings_before.json  02_settings_set.json  03_settings_after.json  04_upload.json  05_split.json  06_chunks_before_clean.json  07_clean_task.json  08_chunks_after_clean.json  09_eval_ratios.json  10_eval_generate.json  11_eval_list.json  12_questions_gen.json  13_questions.json  14_datasets_gen.json  15_datasets.json  16_dataset_edit.json  17_datasets_after_edit.json  18_export.json  run_meta.txt  safety-alpaca.json
tests_examples/case4-cleansing/prompt/: clean.md
tests_examples/case5-image-ppt/: README.md
tests_examples/case5-image-ppt/input/: make_pdf.py
tests_examples/case5-image-ppt/output/: 01_project.json  02_model_set.json  03_pdf_import.json  04_prompt_set.json  05_questions_task.json  06_questions.json  07_dataset_task.json  08_image_datasets_raw.json  ppt-alpaca-text-only.json
tests_examples/case5-image-ppt/prompt/: image_question.md
(+12 files in other folders)
