[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-dataset-cli"
version = "1.0.1"
description = "A stateful CLI for Easy-Dataset — drive the full LLM dataset-generation pipeline (chunk → questions → answers → export Alpaca/ShareGPT) over HTTP from your terminal or from an AI agent."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Terry-cyx" },
]
keywords = [
    "easy-dataset",
    "llm",
    "fine-tuning",
    "dataset-generation",
    "alpaca",
    "sharegpt",
    "cli",
    "agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "responses>=0.23",
]

[project.scripts]
easyds = "easyds.cli:main"

[project.urls]
"Homepage"      = "https://github.com/Terry-cyx/easy-dataset-cli"
"Source"        = "https://github.com/Terry-cyx/easy-dataset-cli"
"Issue Tracker" = "https://github.com/Terry-cyx/easy-dataset-cli/issues"
"Easy-Dataset"  = "https://github.com/ConardLi/easy-dataset"

[tool.setuptools]
packages = [
    "easyds",
    "easyds.core",
    "easyds.utils",
]
# Note: agent skill docs live at plugins/easyds/skills/easyds/ (single source
# of truth, consumed by both the Claude Code plugin and the standalone CLI).
# They are intentionally NOT shipped inside the wheel — read them on GitHub,
# or install the Claude Code plugin which bundles them automatically.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

# ──────────────────────────────────────────────────────────────────────
# uv-managed dev workflow
#
# Quick start (after `git clone`):
#
#     uv sync --extra test           # install + lock dev deps
#     uv run easyds --version
#     uv run pytest                  # 246 passed, 1 skipped
#
# End-user install (no clone needed):
#
#     uv tool install easy-dataset-cli       # isolated tool install
#     # or:
#     uv pip install easy-dataset-cli        # into current env
#     # or, plain pip:
#     pip install easy-dataset-cli
# ──────────────────────────────────────────────────────────────────────

[tool.uv]
# uv-specific configuration; safe to keep even when installed via plain pip.
dev-dependencies = [
    "pytest>=7.0",
    "responses>=0.23",
]
